fix horizontal overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@ body {
   width: 100vw;
   flex-direction: column;
   align-items: center;
+  overflow-x: hidden;
 }
 header {
   display: flex;
